--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org/" class = "html">
 <head>
     <link type="text/css" href="css/index.css" rel="stylesheet" />
+    <link rel="icon" href="icon.png">
 </head>
 <body class = "html">
 <div class="container">
